--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "youtube_clone",
-  "version": "0.1.0",
+  "name": "project_youtube_video_player",
+  "version": "1.0.0",
   "private": true,
- "dependencies": {
+  "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
